--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-6 d-flex flex-column justify-content-center">
-          <h1 data-aos="fade-up">Vyksta programavimo darbai</h1>
+          <h1 data-aos="fade-up">Vyksta svetainės atnaujinimo darbai</h1>
           <!-- <h2 data-aos="fade-up" data-aos-delay="400"></h2> -->
           <div data-aos="fade-up" data-aos-delay="600">
             <!-- <div class="text-center text-lg-start">
